# enterprise-knowledge-agentic-rag

./: .env.example  AGENTS.md  README.md  pyproject.toml  经营分析Agentde完整链路文档生成提示词.md
apps/: __init__.py
apps/api/: __init__.py  deps.py  main.py
apps/mcp/: __init__.py  sql_server.py
apps/web/: README.md
apps/worker/: __init__.py  main.py
core/: __init__.py
core/agent/: __init__.py  risk.py  router.py  state.py  workflow.py
core/analytics/: __init__.py  analytics_result_model.py  data_masking.py  data_source_registry.py  insight_builder.py  metric_catalog.py  metric_resolver.py  report_formatter.py  report_templates.py  schema_registry.py
core/common/: __init__.py  async_task_runner.py  cache.py  error_codes.py  exceptions.py  response.py
core/config/: __init__.py  logging.py  settings.py
core/contracts/: __init__.py
core/database/: __init__.py  base.py  session.py
docker/: README.md
docs/: A2A_LANGGRAPH_MIXED_ARCHITECTURE.md  AGENT_MESH_DESIGN.md  AGENT_WORKFLOW.md  ANALYTICS_AGENT_ACCEPTANCE_CHECKLIST.md  ANALYTICS_AGENT_E2E_WORKFLOW.md  ANALYTICS_DATA_SOURCE.md  ANALYTICS_PERF_REVIEW_V1.md  API_DESIGN.md  ARCHITECTURE.md  ARCHITECTURE_FLOW_GUIDE_CN.md  DB_DESIGN.md  PRD.md  PROJECT_STRUCTURE.md  PROMPT_ENGINEERING.md  SUPERVISOR_ANALYTICS_PERSISTENCE_BOUNDARY.md  SUPERVISOR_ANALYTICS_STATE_MACHINE.md  SUPERVISOR_MULTI_AGENT_ARCHITECTURE.md  TECH_SELECTION.md  schema.sql  经营分析Agent完整链路文档.md
evals/: analytics_react_planning_cases.jsonl  analytics_slot_fallback_cases.jsonl
scripts/: README.md  eval_prompts.py
tests/: __init__.py
(+262 files in other folders)
