[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "enterprise-knowledge-agentic-rag"
version = "0.1.0"
description = "新疆能源集团知识与生产经营智能 Agent 平台项目骨架"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pdfplumber>=0.11,<1.0",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "PyMuPDF>=1.24,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["apps", "core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
